--- a/metadata.yaml
+++ b/metadata.yaml
@@ -24,6 +24,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Authors, American -- 19th century -- Biography'
 - !lcc 'PS'
+- GITenberg
 tableOfContents: William Dean Howells -- Bret Harte -- Mark Twain -- "Lew" Wallace
   -- George W. Cable -- Henry James -- Francis Richard Stockton -- Joel Chandler Harris
   -- S. Weir Mitchell -- Robert Grant -- F. Marion Crawford -- James Lane Allen --
